@@ -26,6 +26,7 @@
 #include "sysinfo.h"
 
 extern char	*CONFIG_SOURCE_IP;
+extern int	CONFIG_TIMEOUT;
 
 int	get_value_snmp(DC_ITEM *item, AGENT_RESULT *value);
 
